# sphinx-shell

./: flake.nix  pyproject.toml
.github/workflows/: build.yml
