[project]
name = "env"
version = "0.1.0"
description = ""
authors = []
license = {text = "Apache Software License" }
requires-python = ">= 3.9"
dependencies =[
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-book-theme>=1.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-jquery>=4.1",
]

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = true
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = true
